# umdapy

./: .cursorrules  .gitignore  .pre-commit-config.yaml  README.md  git-delete-tags.sh  pyproject.toml  ruff.toml
.github/workflows/: pyinstaller-build.yml  pyinstaller-windows.yml
scripts/: felionpy-build.mjs  umdapy-build.js  umdapy.spec
src/: conda.yml  hook-main.py  main.py  requirements.txt  setup.py
src/hooks/: hook-umdalib.py  hook-umdalib.training.py  hook-umdapy.py  hook-wandb.py
src/umdalib/: __init__.py  getVersion.py  ws.py
src/umdalib/server/: __init__.py
src/umdalib/server/flask/: __init__.py
src/umdalib/training/: apply_filter_for_molecular_analysis.py  apply_filter_for_ydata.py  check_duplicates_on_x_column.py  embedd_data.py  make_index_and_save_file.py  ml_model.py  ml_prediction.py  ml_prediction_analysis.py  mol2vec.py  molecular_analysis.py  pca.py  read_data.py  train_mol2vec.py  utils.py  y_data_distribution.py
src/umdalib/utils/: __init__.py  write_to_disk.py
src/umdapy/: getVersion.py
src/umdapy/server/: __init__.py
src/umdapy/server/flask/: __init__.py
src/umdapy/training/: embedd_data.py  read_data.py
src/umdapy/utils/: __init__.py
